force-app/main/default/objects/N26__mdt/N26__mdt.object-meta.xml
<CustomObject>
    <label>N26</label>
    <pluralLabel>n26</pluralLabel>
</CustomObject>