force-app/main/default/objects/N26__mdt/fields/ATM_Fee_in_other_currencies__c.field-meta.xml
<CustomField>
    <fullName>ATM_Fee_in_other_currencies__c</fullName>
    <label>ATM Fee in other currencies</label>
    <length>10</length>
    <type>Text</type>
</CustomField>