force-app/main/default/objects/N26__mdt/fields/Card_Replacement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Card_Replacement_Cost__c</fullName>
    <label>Card Replacement Cost</label>
    <length>10</length>
    <type>Text</type>
</CustomField>