force-app/main/default/objects/N26__mdt/fields/Cost_per_Calendar_Month__c.field-meta.xml
<CustomField>
    <fullName>Cost_per_Calendar_Month__c</fullName>
    <label>Cost per Calendar Month</label>
    <length>10</length>
    <type>Text</type>
</CustomField>